<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/opciones_medicion_titulo">

        <ListPreference
            app:key="num_aspas"
            app:title="@string/numero_aspas_opcion"
            app:entries="@array/variedad_aspas"
            app:defaultValue="2"
            app:entryValues="@array/variedad_aspas"
            app:summary="Debe asignarse la cantidad de aspas correspondientes al motor utilizado"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:key="cant_muestras"
            app:title="@string/cant_muestras_opcion"
            app:entries="@array/variedad_cant_muestras"
            app:entryValues="@array/variedad_cant_muestras"
            app:defaultValue="2"
            app:summary="@string/summary_cant_muestras_opcion"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <!-- lo de abajo no lo necesito por ahora ... -->
    <!--
    <PreferenceCategory app:title="@string/menu_config">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
-->
</PreferenceScreen>